# switchrs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  devices.rs  main.rs  utils.rs
