[package]
name = "switchrs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
colored = "2.0.0"
rust-tuyapi = "0.8.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
