[package]
name = "switchrs"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
rust-tuyapi = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
